environments/logging/manifests/cluster-logs-elasticsearch-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: cluster-logs
  namespace: default
spec:
  rules:
  - host: hasadna-cluster-logs-elasticsearch.uumpa.xyz
    http:
      paths:
      - backend:
          serviceName: cluster-logs-es-http
          servicePort: http
  tls:
  - hosts:
    - hasadna-cluster-logs-elasticsearch.uumpa.xyz
    secretName: cluster-logs-cert
