environments/logging/manifests/cluster-logs-kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: cluster-logs-kibana
  namespace: default
spec:
  rules:
  - host: hasadna-cluster-logs-kibana.uumpa.xyz
    http:
      paths:
      - backend:
          serviceName: cluster-logs-kibana-kb-http
          servicePort: http
  tls:
  - hosts:
    - hasadna-cluster-logs-kibana.uumpa.xyz
    secretName: cluster-logs-kibana-cert
